--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/js": "^4.7.95",
     "chartist": "0.11.0",
     "node-sass": "4.9.3",
     "sass-loader": "7.1.0",
@@ -18,7 +19,7 @@
     "vuetify": "1.4.3"
   },
   "devDependencies": {
-    "@mdi/font": "2.5.94",
+    "@mdi/font": "^2.5.94",
     "@vue/cli-plugin-babel": "^4.1.1",
     "@vue/cli-plugin-eslint": "3.0.1",
     "@vue/cli-service": "^4.1.1",
@@ -26,7 +27,7 @@
     "axios": "0.19.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.0.1",
-    "material-design-icons-iconfont": "3.0.3",
+    "material-design-icons-iconfont": "^3.0.3",
     "stylus": "0.54.5",
     "stylus-loader": "3.0.1",
     "vue-analytics": "5.8.0",
