--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vuetify": "1.4.3"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.0",
     "@mdi/font": "^2.5.94",
     "@vue/cli-plugin-babel": "^4.1.1",
     "@vue/cli-plugin-eslint": "3.0.1",
