--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "0.19.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.0.1",
+    "font-awesome": "^4.7.0",
     "material-design-icons-iconfont": "^3.0.3",
     "stylus": "0.54.5",
     "stylus-loader": "3.0.1",
